# pkgutils

./: .gitignore  Makefile.am  NEWS  README  configure.ac
etc/: Makefile.am  pkgadd.conf  pkgmk.conf
include/pkgutils/: Makefile.am  filemode.h  list.h  misc.h  pkgutils.h  types.h
man/: Makefile.am  pkgadd.8.in  pkginfo.8.in  pkgmk.8.in  pkgrm.8.in
pkgdiet/: Makefile  pkgdiet.c  pkgdiet.conf
pkgutils/: AUTHORS  Makefile  Makefile.am  Makefile.h  Makefile.in  configure  configure.in  libpkgadd.c  libpkgrm.c  misc.c  pkg_db.c  pkgadd.c  pkginfo.c  pkgrm.c
pkgutils/crux/: Pkgfile  config.cache
pkgutils/etc/: Makefile.in  pkgadd.conf
pkgutils/include/: Makefile.am  Makefile.in  filemode.h  list.h  misc.h  pkgutils.h  types.h
pkgutils/include/pkgutils/: Makefile.in  filemode.h
pkgutils/man/: Makefile  Makefile.in  pkgadd.8.in  pkginfo.8.in  pkgmk.8.in  pkgrm.8.in  rejmerge.8.in
pkgutils/scripts/: Makefile.in  pkgmk.in
pkgutils/src/: Makefile  Makefile.in  entry.h  filemode.c  libpkgadd.c  libpkgdb.c  libpkgrm.c  list.c  misc.c  pkgadd.c  pkginfo.c  pkgmk.in  pkgrm.c  pkgutils.c
pkgutils/testsuite/: Pkgfile
scripts/: Makefile.am  rejmerge.in
src/: Makefile.am  filemode.c  libpkgadd.c  libpkgdb.c  libpkgrm.c  list.c  misc.c  pkgadd.c  pkginfo.c  pkgrm.c  pkgutils.c
